# KesselDB

./: .dockerignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
clients/python/: kesseldb.py
crates/kessel-bench/: Cargo.toml
crates/kessel-bench/src/: main.rs
crates/kessel-cache/: Cargo.toml
crates/kessel-catalog/: Cargo.toml
crates/kessel-client/: Cargo.toml
crates/kessel-client/src/: lib.rs
crates/kessel-codec/: Cargo.toml
crates/kessel-crypto/: Cargo.toml
crates/kessel-expr/: Cargo.toml
crates/kessel-fetch/: Cargo.toml
crates/kessel-fetch/src/: coerce.rs  csv.rs  http.rs  json.rs  lib.rs  ndjson.rs  tls.rs
crates/kessel-fetch/tests/: objstore_stub.rs  paginate_stub.rs  parquet_decode.rs  stub_server.rs  tls_stub.rs
crates/kessel-fetch/tests/fixtures/: README.md  localhost.key.pem  localhost.pem
crates/kessel-http-gateway/: Cargo.toml
crates/kessel-http-gateway/src/: crypto.rs  engine.rs  lib.rs  metrics_writer.rs  parse.rs  response.rs  routes.rs  server.rs  ws.rs
crates/kessel-http-gateway/src/ws/: frame.rs  mod.rs  session.rs
crates/kessel-http-gateway/tests/: e2e_curl.rs  metrics_e2e.rs  parse_kats.rs  pentest.rs
crates/kessel-http-gateway/tests/common/: mod.rs
crates/kessel-io/: Cargo.toml
crates/kessel-objstore/: Cargo.toml
crates/kessel-objstore/src/: azure.rs  b64.rs  lib.rs  sigv4.rs
crates/kessel-parquet/: Cargo.toml
crates/kessel-parquet/src/: .gitattributes  assembly.rs  brotli.rs  brotli_bit_reader.rs  brotli_command.rs  brotli_context.rs  brotli_dictionary.rs  brotli_distance.rs  brotli_huffman.rs  brotli_metablock.rs  brotli_ring.rs  dict.rs  footer.rs  gzip.rs  lib.rs  lz4.rs  meta.rs  plain.rs  rle.rs  snappy.rs  thrift.rs  zstd.rs  zstd_fse.rs  zstd_huffman.rs  zstd_huffstream.rs  zstd_literals.rs  zstd_seqexec.rs  zstd_sequences.rs
crates/kessel-parquet/tests/: fixture_roundtrip.rs
crates/kessel-parquet/tests/fixtures/: README.md  brotli_flat.parquet  decimal_flba.parquet  decimal_flba_eq.parquet  decimal_flba_optional.parquet  decimal_int32.parquet  decimal_int32_dict.parquet  decimal_int32_eq.parquet  decimal_int64.parquet  decimal_int64_eq.parquet  dict_flat.parquet  flat_multirg.parquet  flat_required.parquet  flba_uuid.parquet  gzip_dict.parquet  gzip_nullable.parquet  gzip_plain.parquet  int96_dict.parquet  int96_optional.parquet  int96_plain.parquet  int96_v2_snappy.parquet  list_i64_optional.parquet  list_i64_required.parquet  list_of_list_i64.parquet  list_of_list_of_list_i64.parquet  list_of_map_string_i64.parquet  list_of_struct.parquet  list_string.parquet  list_with_null_items.parquet  lz4_raw_flat.parquet  map_string_i64.parquet  map_string_list_string.parquet  map_string_map_string_i64.parquet  map_string_string.parquet  map_string_struct.parquet  nullable.parquet  nullable_plain.parquet  optional_list_i64.parquet  optional_map_string_i64.parquet  optional_struct.parquet  (+23 more)
crates/kessel-parquet/tools/: regen_brotli_dictionary.py
crates/kessel-pg-gateway/: Cargo.toml
crates/kessel-pg-gateway/src/: auth.rs  cast_stripper.rs  dispatch.rs  engine.rs  error.rs  insertmanyvalues.rs  lib.rs  proto.rs  query.rs  response.rs  server.rs  startup.rs  subquery.rs  types.rs
crates/kessel-pg-gateway/src/copy/: binary.rs  command.rs  csv.rs  dispatch.rs  mod.rs  proto.rs  text.rs
crates/kessel-pg-gateway/src/extq/: binary_numeric.rs  binary_results.rs  mod.rs  proto.rs  response.rs  scalar_row_descriptions.rs  substitute.rs
crates/kessel-pg-gateway/src/pg_catalog/: mod.rs  queries.md  synthesize.rs
crates/kessel-proto/: Cargo.toml
crates/kessel-shard/: Cargo.toml
crates/kessel-sim/: Cargo.toml
crates/kessel-sm/: Cargo.toml
crates/kessel-sm/src/: lib.rs
crates/kessel-sm/tests/: pentest_mvcc_cutover.rs  pentest_mvcc_gc.rs
crates/kessel-sql/: Cargo.toml
crates/kessel-sql/src/: lib.rs
crates/kessel-storage/: Cargo.toml
crates/kessel-vsr/: Cargo.toml
crates/kessel-vsr/src/: lib.rs
crates/kessel-wasm/: Cargo.toml
crates/kessel-wasm/src/: lib.rs
crates/kesseldb-server/: Cargo.toml
crates/kesseldb-server/examples/: embedded.rs
crates/kesseldb-server/src/: cluster.rs  lib.rs  main.rs  read_pool.rs  router.rs  scatter_scan.rs  sharded_engine.rs  sharded_sm.rs
crates/kesseldb-server/tests/: external_source_objstore_oracle.rs  external_source_oracle.rs  external_source_parquet_oracle.rs  external_source_tls_oracle.rs  parallel_reads_oracle.rs  pg_pentest.rs
deploy/fly/: README.md  fly.toml
docs/: ARCHITECTURE.md  BENCHMARKS.md  PERFORMANCE.md  STATUS.md  THESIS.md  USAGE.md
docs/benchmarks/: finalbench-2026-06-02-oltp-read-only.json  finalbench-2026-06-02-oltp-read-write.json  finalbench-2026-06-02-oltp-write-only.json  finalbench-2026-06-02-sharded-pointreads.txt  (+9 more)
kesseldb-tla/: .gitignore  MVCCCutover.cfg  MVCCCutover.tla  MVCCGc.cfg  MVCCGc.tla  MVCCSi.cfg  MVCCSi.tla  MVCCSsi.cfg  MVCCSsi.tla  MVCCStorage.cfg  MVCCStorage.tla  MVCCTx.cfg  MVCCTx.tla  README.md  Replication.cfg  Replication.tla  verify.ps1  verify.sh
scripts/: JdbcSmoke.java  SppgextqbinJdbcSmoke.java  sppgddlfkenforce-smoke.py  sppgextqbin-asyncpg-smoke.py  sppgextqbinnumeric-smoke.py  sppgextqbinnumericnaninf-smoke.py  sppgextqbinr-asyncpg-smoke.py  sppgextqcastvalidate-smoke.py  sppgextqcastvalidatecompat-smoke.py  sppgnullintrender-smoke.py  sppgormdjango-smoke.py  sppgormrealapp-smoke.py  sppgormrelationships-smoke.py  sppgormsqlalchemy-smoke.py  sppgreturningmultirow-smoke.py  sppgserialreturning-smoke.py  sppgsqldistinct-smoke.py  sppgsqlgroupmulticol-smoke.py  sppgsqlgroupsortlimit-smoke.py  sppgsqlhaving-smoke.py  sppgsqljoinalias-smoke.py  sppgsqljoinwhere-smoke.py  sppgsqlmultijoin-smoke.py  sppgsqlplaingrouprender-smoke.py  sppgsqlrightfulljoin-smoke.py  sppgsqlsubquerywhere-smoke.py
tools/bench-compare/: Cargo.toml
tools/bench-compare/src/: main.rs  tpch.rs  workloads.rs
tools/bench-compare/src/drivers/: kesseldb.rs  kesseldb_tpch.rs  mod.rs  postgres.rs  postgres_tpch.rs  sqlite.rs  sqlite_tpch.rs  tigerbeetle.rs
(+441 files in other folders)
