[workspace]
resolver = "2"
members = [
    "crates/kessel-proto",
    "crates/kessel-io",
    "crates/kessel-storage",
    "crates/kessel-catalog",
    "crates/kessel-codec",
    "crates/kessel-expr",
    "crates/kessel-crypto",
    "crates/kessel-sql",
    "crates/kessel-sm",
    "crates/kessel-cache",
    "crates/kessel-shard",
    "crates/kessel-vsr",
    "crates/kessel-bench",
    "crates/kesseldb-server",
    "crates/kessel-client",
    "crates/kessel-sim",
]

[workspace.package]
edition = "2021"
version = "0.0.1"
license = "UNLICENSED"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
