[package]
name = "kessel-client"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
kessel-proto = { path = "../kessel-proto" }
kessel-sql = { path = "../kessel-sql" }
kessel-catalog = { path = "../kessel-catalog" }
kessel-codec = { path = "../kessel-codec" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "kessel"
path = "src/bin/kessel.rs"
