[package]
name = "kessel-fetch"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
kessel-catalog = { path = "../kessel-catalog" }

# Opt-in HTTPS for external-source fetch. OFF by default so the crate's
# default build stays dependency-light (plain http:// only). `rustls`
# is the exact crate+version the kesseldb-server `tls` feature already
# vendors; we use its CLIENT side. `webpki-roots` ships the Mozilla
# root set compiled in (deterministic, no OS trust dependency).
rustls = { version = "0.23", optional = true }
webpki-roots = { version = "1", optional = true }

[features]
tls = ["dep:rustls", "dep:webpki-roots"]

[dev-dependencies]
# Test-only: parse the checked-in localhost fixture PEM for the TLS
# stub server and the custom-root client config.
rustls-pemfile = "2"
