[package]
name = "kessel-http-gateway"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
# Zero external (non-workspace) deps — the deterministic-kernel zero-dep
# invariant. Workspace members only.
kessel-proto = { path = "../kessel-proto" }
kessel-client = { path = "../kessel-client" }

[lib]
path = "src/lib.rs"
