[package]
name = "kessel-http-gateway"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
# Zero external (non-workspace) deps — the deterministic-kernel zero-dep
# invariant. Workspace members only.
kessel-proto = { path = "../kessel-proto" }
kessel-client = { path = "../kessel-client" }
# SP-WS T1: SHA-1 + base64 (kessel-crypto) for the RFC 6455 §4.2.2
# `Sec-WebSocket-Accept` handshake-completion proof. kessel-crypto is a
# workspace member with zero external deps.
kessel-crypto = { path = "../kessel-crypto" }

[lib]
path = "src/lib.rs"

[features]
default = []
test-server = []

[dev-dependencies]
kesseldb-server = { path = "../kesseldb-server", features = ["http-gateway"] }
kessel-proto = { path = "../kessel-proto" }
kessel-client = { path = "../kessel-client" }
