[package]
name = "kessel-sm"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
kessel-proto = { path = "../kessel-proto" }
kessel-io = { path = "../kessel-io" }
kessel-storage = { path = "../kessel-storage" }
kessel-catalog = { path = "../kessel-catalog" }

[lib]
path = "src/lib.rs"
