[package]
name = "kessel-sm"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
kessel-proto = { path = "../kessel-proto" }
kessel-io = { path = "../kessel-io" }
kessel-storage = { path = "../kessel-storage" }
kessel-catalog = { path = "../kessel-catalog" }
kessel-cache = { path = "../kessel-cache" }
kessel-expr = { path = "../kessel-expr" }
# Internal workspace crate (zero external deps). Used by Op::Join to
# build a self-describing typed result (SP72).
kessel-codec = { path = "../kessel-codec" }

[lib]
path = "src/lib.rs"
