[package]
name = "kessel-vsr"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
kessel-proto = { path = "../kessel-proto" }
kessel-io = { path = "../kessel-io" }
kessel-sm = { path = "../kessel-sm" }
kessel-catalog = { path = "../kessel-catalog" }

[dev-dependencies]
kessel-codec = { path = "../kessel-codec" }
kessel-expr = { path = "../kessel-expr" }

[lib]
path = "src/lib.rs"
