[package]
name = "kesseldb-server"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
kessel-proto = { path = "../kessel-proto" }
kessel-io = { path = "../kessel-io" }
kessel-sm = { path = "../kessel-sm" }
kessel-vsr = { path = "../kessel-vsr" }
kessel-sql = { path = "../kessel-sql" }
kessel-codec = { path = "../kessel-codec" }
kessel-catalog = { path = "../kessel-catalog" }
kessel-client = { path = "../kessel-client" }
kessel-shard = { path = "../kessel-shard" }

# Opt-in TLS termination. OFF by default so the standard build stays
# zero-dependency (`cargo build` pulls nothing extra). Enable with
# `cargo build --features tls`.
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }

# Opt-in external data sources (REFRESH). OFF by default. Enable with
# `cargo build --features external-sources`. `kessel-crypto` is only
# pulled in for the deterministic row-id hash on this same path, so it
# is gated behind the identical feature (the kernel stays untouched).
kessel-fetch = { path = "../kessel-fetch", optional = true }
kessel-crypto = { path = "../kessel-crypto", optional = true }

# Opt-in object-store external sources (REFRESH from s3://|az://). OFF
# by default; pulled in only with `--features external-sources-objstore`
# so the standard and plain external-sources builds stay unchanged. The
# router signs requests router-side (env-resolved creds, never logged).
kessel-objstore = { path = "../kessel-objstore", optional = true }

# SP141 opt-in HTTP/1.1 gateway. OFF by default — default build links no
# extra crate. Enable with `cargo build --features http-gateway`.
kessel-http-gateway = { path = "../kessel-http-gateway", optional = true }

[features]
default = []
tls = ["dep:rustls", "dep:rustls-pemfile"]
external-sources = ["dep:kessel-fetch", "dep:kessel-crypto"]
external-sources-tls = ["external-sources", "kessel-fetch/tls", "dep:rustls", "dep:rustls-pemfile"]
external-sources-objstore = ["external-sources", "kessel-fetch/object-store", "dep:kessel-objstore", "dep:rustls", "dep:rustls-pemfile"]
http-gateway = ["dep:kessel-http-gateway"]

[dev-dependencies]
kessel-expr = { path = "../kessel-expr" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "kesseldb"
path = "src/main.rs"
