[package]
name = "bench-compare"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
publish = false
description = "KesselDB cross-DB benchmark harness — Postgres / SQLite / TigerBeetle / KesselDB"

# This crate lives OUTSIDE the KesselDB workspace on purpose. See
# docs/superpowers/specs/2026-05-28-kesseldb-bench-suite-design.md §9.
# It pulls in external runtime deps (rusqlite, tokio-postgres, etc.) that
# would otherwise pollute KesselDB's zero-external-runtime-dep stance.
# The default `cargo build` of KesselDB does NOT see this crate.
[workspace]

[[bin]]
name = "bench-compare"
path = "src/main.rs"

[dependencies]
# KesselDB in-process driver (workspace crates by relative path).
kessel-proto = { path = "../../crates/kessel-proto" }
kessel-io = { path = "../../crates/kessel-io" }
kessel-catalog = { path = "../../crates/kessel-catalog" }
kessel-codec = { path = "../../crates/kessel-codec" }
kessel-sm = { path = "../../crates/kessel-sm" }

# External DB drivers.
rusqlite = { version = "0.31", features = ["bundled"] }
postgres = { version = "0.19", features = ["with-serde_json-1"] }
# TigerBeetle client. Gated by feature `tigerbeetle-real` because the
# tigerbeetle-unofficial-sys crate downloads a Zig toolchain at build time
# (~50 MiB) and requires bindgen + clang headers. Without this feature the
# driver falls back to the honest-stub form documented in
# tools/bench-compare/src/drivers/tigerbeetle.rs. To build with the real
# client on vulcan: BINDGEN_EXTRA_CLANG_ARGS='-I/usr/lib/gcc/x86_64-linux-gnu/13/include' \
#   cargo build --release --features tigerbeetle-real
tigerbeetle-unofficial = { version = "0.14.28", optional = true }
pollster = { version = "0.3", optional = true }

# CLI + JSON + perf utilities.
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }
crossbeam-channel = "0.5"
anyhow = "1"

[features]
default = []
# Opt-in real TigerBeetle client (build deps: bindgen, clang headers, Zig).
# See drivers/tigerbeetle.rs for the version-skew caveats.
tigerbeetle-real = ["dep:tigerbeetle-unofficial", "dep:pollster"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
